--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,7 @@
-
+.myCustomClass{
+    
+    border: 1px solid blue 
+}
 
 /* ==========================================================================
    Author's custom styles
